[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icenine-py"
version = "0.1.0"
description = "Python/PyTorch port of IceNine crystallography and diffraction primitives"
authors = [{name = "S. F. Li", email = "sfli@cmu.edu"}]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["crystallography", "diffraction", "x-ray", "synchrotron"]
license = {text = "MIT"}

dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "pymatgen>=2023.0.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools]
packages = ["icenine"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "benchmark: marks tests as benchmarks (deselect with '-m \"not benchmark\"')",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
